@@ -5,6 +5,6 @@ import java.io.IOException;
 public class ClientInstanceNotFound extends IOException {
 
     public ClientInstanceNotFound(String clientId) {
-        super("Client instance with the unique id \"%s\" was not found".formatted(clientId));
+        super(String.format("Client instance with the unique id \"%s\" was not found", clientId));
     }
 }
